src/App.css
* {
  box-sizing: border-box;
  font-family: Inter !important;
  overflow-x: hidden;
}
.Auth {
  display: flex;
  flex-direction: row;
  height: 100vh;
}

.auth-container {
  width: 50%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0 min(3vw, 110px) 0 min(3vw, 110px);
  background-color: white;
}

.doctor-image--container {
  background-color: #c4c4c42b;
}

/* .leaflet-popup {
  display: none !important;
} */

@media only screen and (max-width: 1000px) {
  .doctor-image--container {
    display: none;
  }
  .auth-container {
    width: 100%;
  }
  .Auth {
    justify-content: center;
  }
}

.safe-stats-logo {
  position: absolute;
  width: 45px;
  height: 200px;
  left: 20px;
  top: 80px;
}

.doctor-image {
  width: 563px;
  height: 563px;
}

.auth-header h3 {
  color: #565555;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: min(2.2rem, 6vw);
  line-height: 44px;
  text-align: center;
  margin-bottom: 20px;
}

.auth-form {
  width: 100%;
}

.auth-form-div {
  width: 100%;
}

.auth-button {
  width: 100%;
  height: 55px;
  background-color: #546E9A;
  border: none;
  border-radius: 20px;
  color: white;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 24px;
  color: #fbfbfb;
  cursor: pointer;
  margin-bottom: 15px;
}

.disabled-button {
  background-color: #565555 !important;
  cursor: default !important;
}

.disabled-button, .auth-button { 
  margin: 10px 0 15px 0;
}

.account-text {
  color: #565555;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 15px;
  margin-left: 10px;
  margin-top: 20px;
}

.account-text a {
  text-decoration: none;
  color: #565555;
  font-weight: 600;

}

.account-text a:hover{
  color: #565555;
}

.account-button {
  margin-top: 60px;
}
.leaflet-popup {
  width: 0;
}

.leaflet-popup-content-wrapper {
  padding: 0 !important;
}

.leaflet-popup-tip {
  width: 0 !important;
  margin: 0 !important;
  padding: 0 !important;
}

.leaflet-popup-close-button {
  width: 0;
}

.leaflet-popup-close-button > span{
  display: none;
}

.control-zoom-margin-top .leaflet-control-zoom {
  margin-top: 80px !important;
}

